src/objects/Metadata_Audit_Log_Item__c.object
<CustomObject>
    <fields>
        <fullName>Delete_Discovered_Date__c</fullName>
        <label>Delete Discovered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entry_type__c</fullName>
        <label>Entry type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deletion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Audit_Run_Log__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Metadata Audit Run Log</label>
        <referenceTo>Metadata_Audit_Run_Log__c</referenceTo>
        <relationshipLabel>Metadata Audit Log Items</relationshipLabel>
        <relationshipName>Metadata_Audit_Log_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metadata_Created_By__c</fullName>
        <label>Metadata Created By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Created_Date__c</fullName>
        <label>Metadata Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Metadata_Item_ID__c</fullName>
        <label>Metadata Item ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_LM_By__c</fullName>
        <label>Metadata LM By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_LM_Date__c</fullName>
        <label>Metadata LM Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Metadata_types</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <label>Metadata Audit Log Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Metadata_LM_Date__c</columns>
        <columns>Entry_type__c</columns>
        <columns>NAME</columns>
        <columns>Metadata_LM_By__c</columns>
        <columns>Metadata_Created_By__c</columns>
        <columns>Metadata_Created_Date__c</columns>
        <columns>Metadata_Item_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Metadata Audit Log Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Audit Log Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>